--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
     </nav>
     <main>
         <article>
@@ -61,20 +60,20 @@
                 <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
 
                 <ul>
-                    <li>1.5 - <abbr title="Bolo de Copo">Cupcake</abbr></li>
-                    <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
-                    <li>3.0 - <abbr title="Bomba">Eclair</abbr></li>
-                    <li>2.2 - <abbr title="Iorgute Congelado">Froyo</abbr></li>
-                    <li>2.3 - <abbr title="Biscoito de Gengibre">Gingerbread</abbr></li>
-                    <li>3.0 - <abbr title="Favo de Mel">Honeycomb</abbr></li>
-                    <li>4.0 - <abbr title="Sanduíche de Sorvete">Ice Cream Sandwich</abbr></li>
-                    <li>4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
-                    <li>4.4 - <abbr title="KtKat">KitKat</abbr></li>
-                    <li>5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
-                    <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
-                    <li>7.0 - <abbr title="Torrone">Nougat</abbr></li>
-                    <li>8.0 - <abbr title="Oreo">Oreo</abbr></li>
-                    <li>9.0 - <abbr title="Torta">Pie</abbr></li>
+                    <li>1.5 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Cupcake">Cupcake</a></li>
+                    <li>1.6 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Donut">Donut</a></li>
+                    <li>3.0 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Eclair">Eclair</a></li>
+                    <li>2.2 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Froyo">Froyo</a></li>
+                    <li>2.3 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Gingerbread">Gingerbread</a></li>
+                    <li>3.0 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Honeycomb">Honeycomb</a></li>
+                    <li>4.0 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Ice_Cream_Sandwich">Ice Cream Sandwich</a></li>
+                    <li>4.1 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Jelly_Bean">Jelly Bean</a></li>
+                    <li>4.4 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_KitKat">KitKat</a></li>
+                    <li>5.0 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Lollipop">Lolipop</a></li>
+                    <li>6.0 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Marshmallow">Marshmallow</a></li>
+                    <li>7.0 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Nougat">Nougat</a></li>
+                    <li>8.0 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Oreo">Oreo</a></li>
+                    <li>9.0 - <a target="_blank"href="https://pt.wikipedia.org/wiki/Android_Pie">Pie</a></li>
                 </ul>
                 
                 <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao <strong>Android 10</strong>.</p>
