Add the most important paragraph

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <h1>Curiosidades de Tecnologia</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
+        <p>Esse parágrafo precisa estar aqui</p>
     </header>
     <nav>
         <a href="home.html">Home</a>
